--- a/boot.properties
+++ b/boot.properties
@@ -1,3 +1,3 @@
 BOOT_EMIT_TARGET=no
-BOOT_VERSION=2.7.2
-BOOT_CLOJURE_VERSION=1.9.0
+BOOT_VERSION=2.8.0-SNAPSHOT
+BOOT_CLOJURE_VERSION=1.10.0-alpha4
